resolved style and layout issues

--- a/code/styles/global.scss
+++ b/code/styles/global.scss
@@ -1,3 +1,5 @@
+@import "utils";
+
 html, body {
   width: 100%;
   height: 100%;
@@ -5,4 +7,12 @@ html, body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 12px;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  font-size: toEm(18);
 }
