--- a/code/styles/universal.scss
+++ b/code/styles/universal.scss
@@ -1,24 +1,17 @@
-$blue = #4A90E2;
-$yellow = #F39C12;
-$red = #BD4A4D;
-$grey = #484644;
+@import "utils";
 
-@function toEm($pt) {
-  @return $pt / 6 * 5
-}
-
-#root {
-  font-size: toEm(18);
-}
+$blue: #4A90E2;
+$yellow: #F39C12;
+$red: #BD4A4D;
+$grey: #484644;
 
 .mainTitle {
   font-size: toEm(48);
 }
-
 .navTitle {
   font-size: toEm(24);
+  text-decoration: none;
 }
-
 .subTitle {
   font-size: toEm(36);
 }
@@ -26,17 +19,17 @@ $grey = #484644;
 .greyText {
   color: $grey;
 }
-
 .blueText {
-  color: $blue;
+  color: $blue !important;
 }
-
 .yellowText {
-  color: $yellow;
+  color: $yellow !important;
 }
-
 .redText {
-  color: $red;
+  color: $red !important;
+}
+.blackText {
+  color: #000;
 }
 
 %divider {
@@ -46,21 +39,21 @@ $grey = #484644;
 }
 %horizontalDivider {
   @extend %divider;
-  width: 80%;
-  height: 2px;
+  width: 100%;
+  height: 1px;
 }
 
 .redDivider {
   @extend %horizontalDivider;
-  background-color: linear-gradient(to left, $grey, $red);
+  background: linear-gradient(to left, $grey, $red);
 }
 .yellowDivider {
   @extend %horizontalDivider;
-  background-color: linear-gradient(to left, $yellow, $grey);
+  background: linear-gradient(to left, $yellow, $grey);
 }
 .blueDivider {
   @extend %divider;
-  width: 2px;
-  height: 80%;
-  background-color: linear-gradient(to bottom, $blue, $grey);
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(to bottom, $blue, $grey);
 }
